Added tests and further checks for accounts and transactions model and routes
